--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Sat Apr 29 14:32:09 EDT 2017
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=b6c06ba3aa6f1587899094d91a8f761d
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.40\\bin
-configurations-xml=b1428f759fa818a19b05246b3b38eec2
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=052f1b4cfa7e50cd33bbbb4073423f9e
-default.languagetoolchain.version=1.40
+#Mon May 01 03:47:14 EDT 2017
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7787462309de955deefcc6f5508f88a9
+default.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v1.34\\bin
+configurations-xml=43b760a39834b79f4746cbe18b79a16a
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=02b44c60b7ea0aab28d65f169487b894
+default.languagetoolchain.version=1.34
 host.platform=windows
 conf.ids=default
